--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -20,6 +20,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          echo A comment on issue $NUMBER
+          echo Hello World!
         env:
           NUMBER: ${{ github.event.issue.number }}
