--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -27,9 +27,19 @@ jobs:
             echo "::set-output name=name::${BASH_REMATCH[1]}"
           fi
 
-      - name: Print message
-        if: steps.check_comment.outputs.name
-        run: |
-          echo "Hello ${{ steps.check_comment.outputs.name }}"
-        env:
-          NUMBER: ${{ github.event.issue.number }}
+      - name: Add comment to PR
+        uses: actions/github-script@v6
+        if: always()
+        with:
+          script: |
+            const name = '${{ github.workflow   }}';
+            const url = '${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}';
+            const success = '${{ job.status }}' === 'success';
+            const body = `${name}: ${success ? 'succeeded ✅' : 'failed ❌'}\n${url}`;
+
+            await github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: body
+            })
