--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -31,3 +31,5 @@ jobs:
               repo: context.repo.repo,
               body: 'Deployment succeeded! ✅',
             }); 
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
