--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,20 +1,7 @@
 name: learn-github-actions
 run-name: ${{ github.actor }} is learning GitHub actions
-on: [push, issue_comment, pull_request_target]
+on: [issue_comment, pull_request_target]
 jobs:
-  check-bats-version:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version : '20'
-
-      - run: npm install -g bats
-
-      - run: bats -v
-
   issue_commented:
     name: Issue comment
     if: ${{ !github.event.issue.pull_request && startsWith(github.event.comment.body, 'TriagerX') }}
